# projeto-tai-3

./: .gitignore  README.md  build.sh  dataset_link  find_music.cpp  generate_freqs.cpp  random_sample.py
GetMaxFreqs/src/: GetMaxFreqs.cpp  Makefile.linux  README
group_2/: README.md  add_noise.py  build.sh  find_music.cpp  find_music.py  generate_freqs.cpp  generate_freqs.py  install_reqs.sh  noises.md  random_sample.py  requirements.txt  results.json
group_2/GetMaxFreqs/src/: CMakeLists.txt  GetMaxFreqs.cpp  Makefile  Makefile.windows
group_2/report/: video
group_2/src/: add_noise.py  benchmark.py  find_music.py  generate_freqs.py  random_sample.py
